--- a/pipelane-front/src/app/features/lists/lists-index.component.html
+++ b/pipelane-front/src/app/features/lists/lists-index.component.html
@@ -15,7 +15,13 @@
         <mat-icon aria-hidden="true">playlist_add</mat-icon>
         Créer une liste
       </button>
-      <button mat-icon-button type="button" (click)="refresh()" [disabled]="loading()" matTooltip="Actualiser">
+      <button
+        mat-icon-button
+        type="button"
+        (click)="refresh()"
+        [disabled]="loading()"
+        matTooltip="Actualiser"
+      >
         <mat-icon aria-hidden="true">refresh</mat-icon>
       </button>
     </div>
