--- a/pipelane-front/src/app/core/help-center/help-center.component.html
+++ b/pipelane-front/src/app/core/help-center/help-center.component.html
@@ -14,7 +14,13 @@
   <section>
     <h3>Ressources</h3>
     <mat-nav-list>
-      <a mat-list-item *ngFor="let link of links" [href]="link.url" target="_blank" rel="noreferrer">
+      <a
+        mat-list-item
+        *ngFor="let link of links"
+        [href]="link.url"
+        target="_blank"
+        rel="noreferrer"
+      >
         <mat-icon matListItemIcon aria-hidden="true">{{ link.icon }}</mat-icon>
         <span>{{ link.label }}</span>
         <mat-icon matListItemMeta aria-hidden="true">open_in_new</mat-icon>
